--- a/gb/21/7/26/n13117259.md
+++ b/gb/21/7/26/n13117259.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eeygma3264/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eeygma3264/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eeygma3264/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eeygma3264/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eeygma3264/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eeygma3264/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eeygma3264/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【新闻看点】烟花再袭如末日？江浙沪撤200万人</h2>
-<a href="https://git.io/J4M5V"><img width="600" src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eeygma3264/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d2esw86q58v8t7.cloudfront.net/G5w6tUCyf"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>宁可过一些！李克强挑战一尊？“烟花”再袭如末日，黄浦江水漫堤；江浙沪撤二百余万，沿海12级强风；头七防祭奠，地铁车厢蒙黑布转移；只能死6人？（新闻看点提供）
 </h6>
 <hr>
-	<p>【大纪元2021年07月27日讯】大家好，欢迎大家关注《<ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>》，我是李沐阳。今天是美东时间7月26日（星期一），亚洲时间是7月27日（星期二）。</p>
+	<p>【大纪元2021年07月27日讯】大家好，欢迎大家关注《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>》，我是李沐阳。今天是美东时间7月26日（星期一），亚洲时间是7月27日（星期二）。</p>
 <p>今天焦点：宁可过一些！李克强挑战一尊？“烟花”再袭如末日，黄浦江水漫堤；江浙沪撤二百余万，沿海12级强风；头七防祭奠，地铁车厢蒙黑布转移；只能死6人？京广隧道定调；对美拉清单？中共很想谈。</p>
 <h3>60秒新闻</h3>
 <p>一名拜登政府的高级官员向美联社透露，拜登与伊拉克总理哈德米在美东时间26日宣布，双方达成协议，今年底前结束美军在伊拉克的任务。</p>
@@ -15,11 +15,11 @@
 <p>26日，2021东京奥运会进入第三天。13岁的日本小选手西矢椛在女子滑板项目中一举夺魁，成为日本史上最年轻的冠军。</p>
 <p>7月17日，新墨西哥州78岁老奶奶琳达?派特森参加全国运动员力量协会夏季举重比赛时，取得了这项赛事的四项全国纪录。几年前，她因车祸受伤，脊柱不能正常伸展，还接受了膝盖置换手术。</p>
 <p>截止到美东时间7月26日下午2点，全球新增确诊中共病毒（武汉病毒、新冠病毒）人数42万9,321人，总确诊人数达到了1亿9,515万4,486人；单日死亡6,993人，累积死亡总数是418万0051人。</p>
-<p><center><a title="YouTube video player" src=""></a><a href="https://git.io/J4M5V"><img width="600" src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eeygma3264/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/bhCl0DE4nKM" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center>下面进入今天的话题。台风“烟花”今天第二次在浙江登陆，对江浙和上海等地再次形成重创。今天也是<ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E9%83%91%E5%B7%9E%E5%9C%B0%E9%93%815%E5%8F%B7%E7%BA%BF.md#1">郑州地铁5号线</a>遇难者头七纪念日，很多家属前往祭奠，但是当局不仅封挡了地铁出口，而且悄悄把地铁车厢蒙上黑布，一节节地转移了。车厢里有什么呢？</p>
-<p><ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E4%BA%AC%E5%B9%BF%E8%B7%AF%E9%9A%A7%E9%81%93.md#1">京广路隧道</a>的车子已经全部都清空了，但当局通报的遇难人数仅仅是6人，显示当局已经给京广路隧道事件定调了。而有消息披露，郑州已经抓了一千多人。</p>
+<p><center><a title="YouTube video player" src=""></a><a href="https://d2esw86q58v8t7.cloudfront.net/G5w6tUCyf"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/bhCl0DE4nKM" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center>下面进入今天的话题。台风“烟花”今天第二次在浙江登陆，对江浙和上海等地再次形成重创。今天也是<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%83%91%E5%B7%9E%E5%9C%B0%E9%93%815%E5%8F%B7%E7%BA%BF.md#1">郑州地铁5号线</a>遇难者头七纪念日，很多家属前往祭奠，但是当局不仅封挡了地铁出口，而且悄悄把地铁车厢蒙上黑布，一节节地转移了。车厢里有什么呢？</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BA%AC%E5%B9%BF%E8%B7%AF%E9%9A%A7%E9%81%93.md#1">京广路隧道</a>的车子已经全部都清空了，但当局通报的遇难人数仅仅是6人，显示当局已经给京广路隧道事件定调了。而有消息披露，郑州已经抓了一千多人。</p>
 <h2>“宁可过一些” 李克强挑战“一尊”？</h2>
 <p>今天（26日），中共总理李克强在抗洪抢险救灾和防汛会议上表示，紧急情况下，除特殊行业外，“果断停工、停学、停业”。对城市地铁、隧道等要有保障安全硬措施，“宁可过一些，该停就停，该封就封”。</p>
-<p>这是<ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E5%8F%B0%E9%A3%8E%E7%83%9F%E8%8A%B1.md#1">台风烟花</a>正在袭击江浙、上海一带的同时，也是河南特大水灾造成重大伤亡，网民痛骂北京当局之后，李克强做出的最新指示。</p>
+<p>这是<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E9%A3%8E%E7%83%9F%E8%8A%B1.md#1">台风烟花</a>正在袭击江浙、上海一带的同时，也是河南特大水灾造成重大伤亡，网民痛骂北京当局之后，李克强做出的最新指示。</p>
 <p>说起来，李克强的这个最新命令比较实际一些，在给地方当局、地方部门一定的自主权力。不用等“上头”的命令，紧急情况下可以自主处理。</p>
 <p>但是如果品品李克强的说法，他说紧急情况下“宁可过一些”，其实与北京当局强调的“定于一尊”是有些相悖的。</p>
 <p>正常人的想法，在“紧急情况下”，也就是预感到人的生命遭到威胁的时候。那为了保证生命安全，怎么处理其实都不为过，都可以理解。这在西方社会，在重视生命的国家，这种做法是比较常见的。</p>
@@ -27,12 +27,12 @@
 <p>而李克强的意思是说，人们可以特殊情况特殊对待，甚至是可以不必考虑“一尊”不一尊。这在一定意义上说，其实是对北京最高领导人的权力形成了一定的冲击的。</p>
 <p>大家还记得武汉疫情爆发之初，习近平任命李克强担任抗疫小组组长，这是唯一一个“大权旁落”的官位。但是在2020年1月28日，习近平在会见世卫组织谭德塞的时候，却说他本人一直在“亲自指挥、亲自部署”。从中可以看出，北京当局对权力的控制相当谨慎。</p>
 <p>而李克强现在说“宁可过一些”，就是告诉各级各部门的官员，危急时刻可以自己做主。安全防范措施“过一些”可以，不必非得等“一尊”的命令。是不是这个意思？</p>
-<p>有意思的是，24日，浙江省长郑栅洁在<ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E5%8F%B0%E9%A3%8E%E7%83%9F%E8%8A%B1.md#1">台风烟花</a>来袭之前，也要求“遇到突发状况不能层层等命令”。他表示“要有第一时间的意识”，“迅速及时决策”。</p>
+<p>有意思的是，24日，浙江省长郑栅洁在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E9%A3%8E%E7%83%9F%E8%8A%B1.md#1">台风烟花</a>来袭之前，也要求“遇到突发状况不能层层等命令”。他表示“要有第一时间的意识”，“迅速及时决策”。</p>
 <p>习李不睦、中共内斗的各种坊间消息非常多。无论是李克强的新令还是浙江省长郑栅洁的说法，实际都是对“一尊”统治的挑战。或者说是在暗批北京当局，在河南水灾面前，仍然不下放权力，导致出现重大伤亡。</p>
-<p>关于河南的<ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E7%81%BE%E6%83%85.md#1">灾情</a>，包括死亡人数等，我们稍后还会谈到。这里先来关注台风烟花对江浙、上海一带的侵袭和造成的影响。</p>
+<p>关于河南的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%81%BE%E6%83%85.md#1">灾情</a>，包括死亡人数等，我们稍后还会谈到。这里先来关注台风烟花对江浙、上海一带的侵袭和造成的影响。</p>
 <h2>烟花二次登陆浙江 长三角受灾严重</h2>
 <p>当地时间今天（26日）上午9点50分左右，第六号台风烟花在浙江第二次登陆了。这使江浙和上海一带的降雨进一步增加，所带来的灾害也进一步扩大。</p>
-<p>据中共官媒报导，烟花二次登陆是在浙江嘉兴平湖市沿海一带。中心附近最大风力10级，风速为28米/秒。导致杭州、宁波、绍兴、舟山等浙江沿海多个地区，都出现了海水倒灌和山体滑坡等<ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E7%81%BE%E6%83%85.md#1">灾情</a>。</p>
+<p>据中共官媒报导，烟花二次登陆是在浙江嘉兴平湖市沿海一带。中心附近最大风力10级，风速为28米/秒。导致杭州、宁波、绍兴、舟山等浙江沿海多个地区，都出现了海水倒灌和山体滑坡等<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%81%BE%E6%83%85.md#1">灾情</a>。</p>
 <p>网友拍摄的影片显示，上海呼啸的狂风伴随着暴雨，遮天蔽日，如同末日景象。在大风的吹袭下，有市民被吹倒在地。</p>
 <p>上海市民陈女士告诉大纪元，上海郊区、黄浦江那边暴雨很大。平时黄浦江市区观望台与路面有2米落差，但现在黄浦江的水已经跟河堤差不多一样平了。</p>
 <p>而青埔那里有好多人转移，就是因为黄浦江的水越堤益处了。从网友拍摄的视频看，外滩的黄浦江水位已经漫过了堤坝。</p>
@@ -49,14 +49,14 @@
 <p>在台风来袭之前，浙江宁波市的车主宁愿被交警罚款，也要把车停到高架桥上。昨天（25日）下午，明州高架桥上已经停了不少私家车，使这座市内高架桥变成了“空中停车场”。</p>
 <h2>头七防祭典 地铁车厢蒙黑布运走</h2>
 <p>我们接下来关注河南的灾情。</p>
-<p>今天（26日）是7.20<ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E9%83%91%E5%B7%9E%E5%9C%B0%E9%93%815%E5%8F%B7%E7%BA%BF.md#1">郑州地铁5号线</a>遇难者“头七”，有不少家属到沙口路站C出口去祭典罹难的亲人。照片中显示，沙口路站的外面摆满了花束。</p>
+<p>今天（26日）是7.20<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%83%91%E5%B7%9E%E5%9C%B0%E9%93%815%E5%8F%B7%E7%BA%BF.md#1">郑州地铁5号线</a>遇难者“头七”，有不少家属到沙口路站C出口去祭典罹难的亲人。照片中显示，沙口路站的外面摆满了花束。</p>
 <p>有这么一张图。在沙口路站B出口外，地上坐着一名男子。旁边的自行车上绑着一块牌子，上面写着“妞妞，爸爸还想接你回家”。</p>
 <p>但是中共很快派人在沙口路站围上了黄色挡板，把家属祭典亡灵的鲜花都给圈了起来。到下午的时候，当局也把B出口用挡板围了起来。</p>
 <p>另有网友在视频中曝光，当局已经出动多辆大卡车，把一节节的地铁车厢都拉走了。而这些地铁车厢的窗户上也都蒙着黑布。</p>
 <p>地铁车为什么要运走？被水淹了就不能用吗？为什么运地铁车厢时要蒙上黑布？里面有什么见不得人的？懂得人自然会懂，不懂的人永远不懂。</p>
 <h2>只通报6人死亡 京广隧道定调？</h2>
 <p>河南省当局通报，截止到当地时间中午12点，河南全省有69个人遇难，失踪5人。罹难者人数比25日通报的人数多了6人，但当局并没有说明这新增6名遇难者是在哪里发现的。</p>
-<p>截止到昨天（25日）早上7点，<ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E4%BA%AC%E5%B9%BF%E8%B7%AF%E9%9A%A7%E9%81%93.md#1">京广路隧道</a>所有路段中的车辆已经全部被拖出，但当局没有说明共有多少辆车。官方目前公布的数字，仅有6人在隧道内遇难。</p>
+<p>截止到昨天（25日）早上7点，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BA%AC%E5%B9%BF%E8%B7%AF%E9%9A%A7%E9%81%93.md#1">京广路隧道</a>所有路段中的车辆已经全部被拖出，但当局没有说明共有多少辆车。官方目前公布的数字，仅有6人在隧道内遇难。</p>
 <p>也就是说，在京广路隧道这里，中共是不太可能增加罹难者数字了。不管在这里有多少冤魂，中共都可能不再往上增加人数了。换句话说，中共很可能已经定调了，京广路隧道就死了6个人。</p>
 <p>不管你信不信，也不管你是不是爆粗口，反正中共很可能就这么定了。如果你要是不信，或者在网络上表示质疑，那么它就会使用老办法——抓人封口。</p>
 <p>这方面的例子就不举了，24日的节目中我谈到过，大家可以去翻看一下我前面的节目。</p>
@@ -98,7 +98,7 @@
 <p>右上角有不少举着中共党旗的人，在振臂高呼。但他们的上方，天空已经显出了红色，道道闪电在撕裂阴暗的天空。</p>
 <p>左下角是京广北路隧道处堆积的汽车。这部分已经无须多言，虽然中共隐瞒真相，但是堆积的汽车在无声的讲述着真相和表达抗议。</p>
 <p>右下角也有很多人在欢呼，这些人有的手举着“天灭中共”，有的手举着“三退保平安”这样的横幅。这个部分的天空是通透的，空中有很多放射着光芒的星星。</p>
-<figure id="attachment_13117391" aria-describedby="caption-attachment-13117391" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/07/id13117391-efabc66a0d8206198cfd0354d69667b1.jpg"><img class="size-large wp-image-13117391" src="https://i.epochtimes.com/assets/uploads/2021/07/id13117391-efabc66a0d8206198cfd0354d69667b1-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-13117391" class="wp-caption-text">听信中共的谎言，等待他们的却是各种灾难。（<ahref="https://github.com/eeygma3264/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>观众提供）</figcaption></figure>
+<figure id="attachment_13117391" aria-describedby="caption-attachment-13117391" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/07/id13117391-efabc66a0d8206198cfd0354d69667b1.jpg"><img class="size-large wp-image-13117391" src="https://i.epochtimes.com/assets/uploads/2021/07/id13117391-efabc66a0d8206198cfd0354d69667b1-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-13117391" class="wp-caption-text">听信中共的谎言，等待他们的却是各种灾难。<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>观众提供）</figcaption></figure>
 <p>网友表示，现在中国大陆的人们，有不少人听信了中共一言堂的谎言灌输。对外界真实的声音听不进去，也不敢相信，这令人痛心。</p>
 <p>但他们不知道，听信中共的谎言，等待他们的却是各种灾难。而只有认清中共的邪恶，彻底摆脱中共的精神束缚，才可能平安度过劫难。</p>
 <p>带给大家的第二幅画作是一位大陆朋友创作的，名叫“贱党伪业”。画面上有一棵树，树的主干上写着“中国特色”。实际应该称为“中共特色”。</p>
@@ -125,41 +125,35 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/19/n13100116.md#1">【新闻看点】美军机再飞台湾 中共4黑客被祭旗</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/20/n13102758.md#1">【新闻看点】美送台反击中共利器 亚洲军备竞赛</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/21/n13105546.md#1">【新闻看点】郑州是内涝还是洪水 习淡化灾情？</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/22/n13107712.md#1">【新闻看点】暴雨仍肆虐河南 多少人魂断5分钟</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/19/n13100116.md#1">【新闻看点】美军机再飞台湾 中共4黑客被祭旗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/20/n13102758.md#1">【新闻看点】美送台反击中共利器 亚洲军备竞赛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/21/n13105546.md#1">【新闻看点】郑州是内涝还是洪水 习淡化灾情？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/22/n13107712.md#1">【新闻看点】暴雨仍肆虐河南 多少人魂断5分钟</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/30/n10099688.md#1" target="_blank">共产暴政录：上山下乡运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/5/n11500416.md#1" target="_blank">滴水穿石 乌克蘭夫妇的坚韧诚心感化民众</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/10/n11444846.md#1" target="_blank">夏祷：2019火种：天象巨变（1）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/3/n9920294.md#1" target="_blank">肝癌不治自愈 澳洲华商经历的奇迹</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/9/n13079158.md#1">【忽必烈传】马可眼中的皇帝与大元帝国</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/20/n13102389.md#1">【未解之谜】预言家凯西：我曾是亚特兰蒂斯人</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/24/n13111358.md#1">【小宇宙传说】时空穿越 他从1958来到2006年</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/12/n13083162.md#1">苏东坡一身忠直正气 自述多次与鬼神谈判</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/21/n13104808.md#1">欧阳修一生奇遇多 常怀疑自己本是世外之人</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/23/n13110635.md#1">【未解之谜】捕捉灵魂的摄影师</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/26/n13115201.md#1">【新闻大家谈】姚诚：卖命偷机密 遭卸磨杀驴</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/26/n13117257.md#1">【远见快评】疯狂围攻外媒 中共文宣失控？</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/25/n13114473.md#1">中共FC-31盗窃美国隐形战机 难匹敌F-35</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/25/n13114084.md#1">视频：郑州一辆被拖出的公交车引发质疑</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/25/n13113051.md#1">【一线采访】村民加高河堤自救 官兵毁堤泄洪</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/25/n13114539.md#1">50岁吴奇隆体能惊人 节目竞技完胜24岁男星</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/23/n13110829.md#1">《时代革命》团队宣布：影片版权已转到海外</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/24/n13111732.md#1">篠原凉子与市村正亲离婚 两儿监护权归父亲</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/24/n13111390.md#1">《恋人的最后情书》影评：相隔几十年的恋情 也能同时开花结果</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/26/n13115286.md#1">池昌旭确诊染疫隔离治疗 新戏暂停拍摄</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/21/n13105343.md#1">蔬菜别直接放冰箱！专家：这样保存最长久</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/24/n13112330.md#1">高端疫苗安全和保护力未明 专家：施打或仍有2好处</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/25/n13113232.md#1">被野熊纠缠7天 美国男子在屋顶写SOS获救</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/25/n13113601.md#1">为了保护10岁小主人 加拿大小狗被土狼咬伤</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/25/n13113442.md#1">球赛前突现尘卷风 众人躲 他却“风中漫步”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/11/8/n11641181.md#1">【医案】老天的考卷</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eeygma3264/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eeygma3264/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/26/n13117259.htm">【新闻看点】烟花再袭如末日？江浙沪撤200万人</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/26/n13117259.htm">【新闻看点】烟花再袭如末日？江浙沪撤200万人</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eeygma3264/djy/blob/master/gb/21/7/26/n13117259.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eeygma3264/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eeygma3264/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eeygma3264/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eeygma3264/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eeygma3264/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/7/26/n13117259.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
